--- a/kervi_ui/web/package.json
+++ b/kervi_ui/web/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.39",
     "angular2": "^2.0.0-beta.21",
     "bootstrap-v4-dev": "^4.0.0-alpha.5",
+    "canvas-gauges": "^2.1.2",
     "chart.js": "^2.4.0",
     "core-js": "^2.4.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.43",
