--- a/kervi_ui/web/package.json
+++ b/kervi_ui/web/package.json
@@ -23,6 +23,8 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.9",
     "@types/lodash": "^4.14.39",
     "angular2": "^2.0.0-beta.21",
+    "bootstrap-slider": "^9.7.2",
+    "bootstrap-touchspin": "^3.1.1",
     "bootstrap-v4-dev": "^4.0.0-alpha.5",
     "canvas-gauges": "^2.1.2",
     "chart.js": "^2.4.0",
