--- a/kervi_ui/web-4/package.json
+++ b/kervi_ui/web-4/package.json
@@ -20,7 +20,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-slider": "^9.8.0",
+    "bootstrap-toggle": "^2.2.2",
+    "canvas-gauges": "^2.1.4",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "font-awesome": "^4.7.0",
+    "moments": "0.0.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -30,6 +38,7 @@
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
+    "fontawesome": "^4.7.2",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
