--- a/kervi_ui/web-4/package.json
+++ b/kervi_ui/web-4/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-slider": "^9.8.0",
-    "bootstrap-toggle": "^2.2.2",
+    "bootstrap-switch": "^3.3.4",
     "canvas-gauges": "^2.1.4",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
