--- a/kervi_ui/web-4/package.json
+++ b/kervi_ui/web-4/package.json
@@ -26,6 +26,7 @@
     "canvas-gauges": "^2.1.4",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "css-toggle-switch": "^4.0.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "^4.7.0",
     "moments": "0.0.2",
