--- a/kervi_ui/web-4/package.json
+++ b/kervi_ui/web-4/package.json
@@ -25,10 +25,12 @@
     "bootstrap-switch": "^3.3.4",
     "canvas-gauges": "^2.1.4",
     "chart.js": "^2.6.0",
+    "chartjs-plugin-zoom": "^0.5.0",
     "core-js": "^2.4.1",
     "css-toggle-switch": "^4.0.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "moments": "0.0.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
