--- a/kervi_ui/web/package.json
+++ b/kervi_ui/web/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-slider": "^9.8.0",
     "bootstrap-switch": "^3.3.4",
+    "bootstrap-toggle": "^2.2.2",
     "canvas-gauges": "^2.1.4",
     "chart.js": "^2.6.0",
     "chartjs-plugin-zoom": "^0.5.0",
@@ -32,7 +33,9 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "moments": "0.0.2",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.1.0",
+    "tether": "^1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
