--- a/kervi/ui/web/package.json
+++ b/kervi/ui/web/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "6.0.6",
+    "@angular/compiler": "6.0.6",
+    "@angular/core": "6.0.6",
+    "@angular/forms": "6.0.6",
+    "@angular/http": "6.0.6",
+    "@angular/platform-browser": "6.0.6",
+    "@angular/platform-browser-dynamic": "6.0.6",
+    "@angular/router": "6.0.6",
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-slider": "^9.8.0",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-toggle": "^2.2.2",
-    "canvas-gauges": "^2.1.4",
+    "canvas-gauges": "^2.1.5",
     "chart.js": "^2.6.0",
     "chartjs-plugin-zoom": "^0.5.0",
     "core-js": "^2.4.1",
@@ -33,14 +33,19 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "moments": "0.0.2",
+    "ngx-gauge": "^1.0.0-beta.4",
+    "photoswipe": "^4.1.2",
     "popper.js": "^1.12.5",
-    "rxjs": "^5.1.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
+    "tempusdominus-bootstrap-4": "^5.0.0",
     "tether": "^1.4.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.4",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "6.0.6",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -53,12 +58,12 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.0",
     "protractor": "~5.1.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.5",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "2.7.2"
   }
 }
