--- a/kervi/ui/web/package.json
+++ b/kervi/ui/web/package.json
@@ -30,7 +30,6 @@
     "core-js": "^2.4.1",
     "css-toggle-switch": "^4.0.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "moments": "0.0.2",
     "ngx-gauge": "^1.0.0-beta.4",
@@ -46,10 +45,10 @@
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "6.0.6",
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
-    "fontawesome": "^4.7.2",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
