--- a/kervi/ui/web/package.json
+++ b/kervi/ui/web/package.json
@@ -37,6 +37,8 @@
     "popper.js": "^1.12.5",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "sockjs": "^0.3.19",
+    "stompjs": "^2.3.3",
     "tempusdominus-bootstrap-4": "^5.0.0",
     "tether": "^1.4.0",
     "zone.js": "^0.8.26"
