--- a/kervi/ui/web/angular.json
+++ b/kervi/ui/web/angular.json
@@ -41,7 +41,9 @@
               "node_modules/photoswipe/dist/photoswipe-ui-default.js",
               "node_modules/tempusdominus-bootstrap-4/build/js/tempusdominus-bootstrap-4.js",
               "node_modules/sockjs-client/dist/sockjs.js",
-              "node_modules/stompjs/lib/stomp.js"
+              "node_modules/stompjs/lib/stomp.js",
+              "lib/colors.js",
+              "lib/jqColorPicker.js"
               
             ]
           },
