--- a/kervi/ui/web/package.json
+++ b/kervi/ui/web/package.json
@@ -27,10 +27,12 @@
     "canvas-gauges": "^2.1.5",
     "chart.js": "^2.6.0",
     "chartjs-plugin-zoom": "^0.5.0",
+    "convert-units": "^2.3.4",
     "core-js": "^2.4.1",
     "css-toggle-switch": "^4.0.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "hammerjs": "^2.0.8",
+    "js-quantities": "^1.7.2",
     "moments": "0.0.2",
     "ngx-gauge": "^1.0.0-beta.4",
     "photoswipe": "^4.1.2",
@@ -50,7 +52,7 @@
     "@angular/compiler-cli": "6.0.6",
     "@fortawesome/fontawesome-free": "^5.1.0",
     "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.118",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
